[package]
name = "range-compare"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A crate to compare ranges"
repository = "https://github.com/Ruben2424/range-compare"
readme = "readme.md"
keywords = ["range", "compare"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]